# HOJ-tool

./: .gitignore  LICENSE  README.md  README_en.md  auto_solver.py  ban_account.py  install_packages.bat  main.py  pyproject.toml  requirements.txt  server.py  user_data.json
cli/: main.py
cli/lib/: api.py  config.py  interaction.py
cli/module/: rank.py  tools.py
lib/: port_utils.py
module/: auto_solver.py  ban_account.py  statistics.py
routers/: api.py  pages.py
static/about/: index.html  index.js  style.css
static/auto_solver/: index.html  index.js  style.css
static/ban_account/: index.html  index.js  style.css
static/css/: style.css
static/frame/: index.html  index.js  style.css
static/home/: index.html  index.js
static/js/: compatibility.js
static/settings/: index.html  index.js  style.css
static/statistics/: index.html  index.js  style.css
tool/: install_packages.bat  minifier.py  packaging.bat  packaging.py  remove_pyc.ps1
tools/: backup_project.ps1  delete_pycache.ps1  packaging.py  port_utils.py  restore_backup.ps1
